# AlgoMLB

./: .gitignore  .odds_api_status.json  .openmeteo_cache.sqlite  .pymarkdownrc  JustFile  README.md  betslip.html  build_state.py  clear_bets.py  config.yaml  cov_report.txt  coverage_full.txt  coverage_miss.txt  coverage_miss_v2.txt  coverage_miss_v3.txt  coverage_report.txt  debug_bet.py  debug_betslip.py  debug_engine.py  debug_engine2.py  debug_features.py  debug_indexing.py  debug_numpad.py  debug_receipt.py  debug_sim.py  debug_xgb.py  fliff_state.json  ingestion_log.txt  pyproject.toml  pyright_output.txt  run_bet.py  run_pipeline.sh  run_pipeline_fast.sh  run_pipeline_full.sh  scratch_test_agg.py  seed_ballparks.py  test_fliff.py  test_fliff_bet.py  test_model.py  test_optuna.py  (+7 more)
.data/cache/: pitching_2023_2023.parquet  team_batting_2023_2023.parquet
.data/models/: optuna_best_params_pa_outcome_v1.1.json
docs/technical_spec/: 00_architecture_overview.md  01_config.md  02_core.md  03_domain.md  04_database.md  05_ingestion.md  06_ml_layer.md  07_cli_ui.md  08_future_modules.md  09_component_models.md  09_monte_carlo.md  10_ml_system_spec.md  10_monte_carlo.md
fadegoblin_playwright/scratch/: test_twitter_post.py
fadegoblin_playwright/src/fadegoblin/: betting.py  browser_fliff.py  browser_twitter.py  card.py  config.py  db_slips.py  ev_logic.py  followup.py  generator.py  main.py  odds.py
models/: batted_ball_baseline_v1.joblib  env_coefficients_v1.json  optimization_history.json
planning_docs/: cli_dashboard.md  cli_dashboard_implementation_plan.md  data_source_expansion.md  data_strategy.md  dependencies.md  ml_layer_expansion_epics.md  monte_carlo_simulation  project_status.md
planning_docs/completed/: cli_dashboard_implementation_plan.md  epic_02_player_transactions_implementation_plan.md  epic_03_weather_progression.md
scratch/: check_2026_odds.py  check_db.py  check_db2.py  check_diagnostic_counts.py  check_odds_schema.py  check_odds_tables.py  check_pnl.py  check_stats_2026.py  debug_odds_mismatch.py  deep_inspect_model.py  diagnose_after.txt  diagnose_ev.py  diagnose_features.py  diagnose_output.txt  diagnose_sim.py  dl_font.py  emergency_backfill.py  find_guardians_odds.py  fix_predictions_table.py  init_bankroll.py  inspect_models.py  inspect_models_v2.py  launch_training.sh  list_odds_matchups.py  migrate_bankroll.py  place_bets_today.py  repro_eval_error.py  reset_usage_table.py  test_agg.py  test_card_render.py  test_graffiti.py  test_multiclass_cal.py  verify_calibrated_v1.3.py  verify_marginal.py  verify_training_features.py  verify_v1.3.py
scripts/: algomlb-settle.service  algomlb-settle.timer  algomlb-sync.service  algomlb-sync.timer  analyze_db.py  auto_sync.sh  autonomous_optimizer.py  backfill_ballparks.py  backfill_bridge.sh  backfill_game_enrichment.py  backfill_manager_hooks.py  backfill_pitcher_daily_usage.py  backfill_quant_features.py  backfill_stadium_enums.py  backfill_statcast.sh  batch_simulate_parallel.py  bulk_fix_dates.py  calibrate_bullpen.py  cleanup_exhibition_games.py  daily_uranium_pipeline.py  db_health_summary.py  fadegoblin-degen.service  fadegoblin-degen.timer  fadegoblin-followup.service  fadegoblin-followup.timer  fadegoblin-night.service  fadegoblin-night.timer  fadegoblin-post.service  fadegoblin-post.timer  fadegoblin-recap.service  fadegoblin-recap.timer  fadegoblin-weekly-recap.service  fadegoblin-weekly-recap.timer  feature_audit.py  fetch_postseason_times.py  fix_game_dates.py  import_weather_csvs.py  master_backfill.py  notebooklm_ingest.py  populate_stadium_dims.py  (+13 more)
src/algomlb/cli/: db.py  ingest.py  main.py  ml.py  process.py  run.py  sync.py  ui.py
src/algomlb/config/: __init__.py  settings.py
src/algomlb/core/: __init__.py  agent_io.py  logger.py
src/algomlb/data/: ballpark_locations.json
src/algomlb/db/: __init__.py  introspection.py  models.py  repository.py  session.py
src/algomlb/domain/: __init__.py  models.py  stadium_bearings.py  teams.py  wind_physics.py
src/algomlb/execution/: fatigue.py  geography.py
src/algomlb/ingestion/: __init__.py  ballpark_ingester.py  fatigue.py  gumbo_ingester.py  historical.py  historical_odds.py  http_client.py  lineup_ingester.py  managers_ingester.py  mlb_stats.py  odds_api.py  openmeteo_ingester.py  orchestrator.py  proxies.py  retrosheet_ingester.py  statcast_ingester.py  transactions_ingester.py  umpire_ingester.py
src/algomlb/ml/: __init__.py  batted_ball_decoupler.py  coefficients.py  data_loader.py  decoupler_pipeline.py  elo.py  eval.py  feature_engineering.py  features.py  hook_model.py  hooks.py  hyperopt.py  model.py  model_io.py  (+10 more)
tests/ml/: test_component_models.py  test_monte_carlo.py
tests/unit/: test_absolute_final.py  test_cli_ingest.py  test_cli_smoke.py  test_core.py  test_count_conditioning.py  test_db.py  test_domain.py  test_final_coverage_bridge.py  test_ingesters.py  test_ingestion.py  test_ingestion_helpers.py  test_ingestion_orchestrator.py  test_introspection.py  test_ml_data.py  test_ml_pipeline.py  test_new_ingesters.py  test_odds_api.py  test_openmeteo_ingester.py  test_proxies.py  test_repository_ballpark.py  test_retrosheet_ingester.py  test_settings.py  test_transactions_ingester.py  test_ui_components.py  test_ui_smoke.py  test_ui_views.py  test_wind_physics.py
(+99 files in other folders)
