[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "algomlb"
version = "0.0.2"
description = "Configuration-driven MLB quantitative betting system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "pydantic-settings",
    "loguru",
    "streamlit",
    "optuna",
    "optuna-dashboard",
    "typer",
    "sqlalchemy>=2.0.48",
    "httpx>=0.28.1",
    "tenacity>=9.1.4",
    "psycopg2-binary>=2.9.11",
    "pybaseball>=2.2.7",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "xgboost>=3.2.0",
    "scikit-learn>=1.8.0",
    "joblib>=1.5.3",
    "numpy>=2.4.4",
    "alembic>=1.14.0",
]

[project.scripts]
algomlb = "algomlb.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/algomlb"]

[dependency-groups]
dev = [
    "complexipy",
    "deptry",
    "import-linter",
    "jitsu",
    "mdformat",
    "pandas-stubs",
    "pre-commit",
    "pymarkdownlnt",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist",
    "respx>=0.22.0",
    "types-pyyaml",
    "types-requests",
    "vulture",
]

[tool.importlinter]
root_package = "algomlb"

[[tool.importlinter.contracts]]
name = "Unidirectional Import Ladder"
type = "layers"
layers = [
    "cli",
    "ui",
    "social",
    "execution",
    "strategy",
    "ml",
    "ingestion",
    "db",
    "domain",
    "config",
    "core",
]
containers = [
    "algomlb",
]

# UI is no longer omitted from coverage.

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == \"__main__\":",
    "def __repr__",
    "raise NotImplementedError",
]
